@@ -79,3 +79,4 @@ On Linux systems, sped up the function for finding processes so that it no longe
 When read_file_lines is used to read a file, the Unix or Windows newlines will be preserved when it is written out.
 ---- Changes since 1.380 ----
 Added a search box to the left frame of the blue theme, for finding modules, config options, help pages and text.
+All images, CSS and other static content served by Webmin has an HTTP Expires for 1 week in the future, to improve cachability.
